--- a/index.html
+++ b/index.html
@@ -3,24 +3,42 @@
     <head>
         <title>Welcome GGCG</title>
         <meta charset="utf8">
+        <style>
+          a {
+            color:black;
+            text-decoration: none;
+          }
+          h1 {
+            font-size:45px;
+            text-align: center
+          }
+          h2 {
+            font-size:20px;
+            text-align: center
+          }
+          h4 {
+            text-align: center
+          }
+          </style>
     </head>
     <body>
-      <h1><a href="index.html">GGoChumin Gallery</a></h1>
-      <ol type+"i">
-        <li><a href="1.html">후방주의</a></li>
-        <li><a href="2.html">기괴한 고우민</a></li>
-        <li><a href="3.html">잘생긴 고우민</a></li>
-        <li><a href="4.html">Uganda's Defense Minister</a></li>
-      </ol>
-       <img src="20 (6).jpg" width="20%">
-      <img src="20 (9).jpg" width="20%">
-      <h2><a>고추민 추종자 여러분 환영합니다. 이 곳은 <strong>오픈소스화</strong>
-        된 고추민 갤러리입니다.<br>고우민 사진을 제보하실 분들은 홈페이지 개발자 우간다 국방부 장관의 인스타로 연락 바랍니다 </a><h2>
+      <h1><a href="1_index.html"><font color="red">始封撐天皇 鈴木開世施僌</font></a></h1>
+      <h2><a href="1.html">고우민 갤러리</a></h2>
+      <h2><a href="2.html">기괴한 고우민</a></h2>
+      <h2><a href="3.html">잘생긴 고우민</a></h2>
+      <h2><a href="4.html">Uganda's Defense Minister</a></h2>
+
+      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/fE_xynh1stY" title=
+            "YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <img src="20 (6).jpg" width="20%">
+          <img src="20 (9).JPG" width="20%">
+
+      <h2><a>시봉텐덴노의 신하 여러분 환영합니다. 이 곳은 <strong>탈중앙화</strong>
+        된 시봉텐덴노 갤러리입니다.<br> 사진을 제보하실 분들은 홈페이지 개발자 우간다 국방부 장관의 인스타로 연락 바랍니다 </a><h2>
           <h2><a href="https://www.instagram.com/hhash_suhan/"
             target="_blank" title="html5
             speicification">instagram</a><h2>
-      <br><h3>His name is <strong>GGOCHUMIN</strong> and
-      <br>He is <u>18</u> years old<h3>
       <br>Made by <u><a href="4.html">Uganda's Defense Minister</a></u>
 
     </body>
