--- a/1.html
+++ b/1.html
@@ -24,11 +24,13 @@
     <body>
       <h1><a href="1_index.html">始封撐天皇 鈴木開世施僌</a></h1>
         <h2><a href="1.html"><font color="red">고우민 갤러리</font></a></h2>
-        <h2><a href="2.html">기괴한 고우민</a></h2>
-        <h2><a href="3.html">잘생긴 고민</a></h2>
-        <h2><a href="4.html">Uganda's Defense Minister</a></h2>
+        <h2><a href="2.html">성수한 갤러리</a></h2>
+        <h2><a href="3.html">엄지환 갤러리입니다</a></h2>
+      <!--  <h2><a href="4.html">잘생긴 고우민</a></h2>
+        <h2><a href="5.html">잘생긴 고우민</a></h2>-->
+        <h2><a href="6.html">Uganda's Defense Minister</a></h2>
 
-      <br><h2><a><strong>※후방주의※</strong></a><h2>
+      <br><h2><a><strong>고우민 갤러리</strong></a><h2>
       <br>
       <img src="10 (1).jpeg" width="20%">
       <img src="10 (2).jpeg" width="20%">
