--- a/3.html
+++ b/3.html
@@ -1,26 +1,35 @@
 <!doctype html>
   <html>
     <head>
-        <title>GGCG Handsomeumin</title>
+        <title>GGCG Strangeumin</title>
         <meta charset="utf8">
+        <style>
+          a {
+            color:black;
+            text-decoration: none;
+          }
+          h1 {
+            font-size:45px;
+            text-align: center
+          }
+          h2 {
+            font-size:20px;
+            text-align: center
+          }
+          h4 {
+            text-align: center
+          }
+        </style>
     </head>
     <body>
-      <h1><a href="index.html">GGoChumin Gallery</a></h1>
-      <ol type="i">
-        <li><a href="1.html">후방주의</a></li>
-        <li><a href="2.html">기괴한 고우민</a></li>
-        <li><a href="3.html">잘생긴 고우민</a></li>
-        <li><a href="4.html">Uganda's Defense Minister</a></li>
-      </ol>
-      <br><h2><a><strong>잘생긴 우민</strong></a><h2>
-      <br>
-      <img src="30 (1).png" width="40%">
-      <img src="30 (3).png" width="40%">
-      <img src="30 (2).PNG" width="20%">
-      <img src="30 (4).PNG" width="20%">
-      <img src="30 (5).png" width="20%">
-      <img src="30 (6).png" width="20%">
+      <h1><a href="1_index.html">始封撐天皇 鈴木開世施僌</a></h1>
+        <h2><a href="1.html">고우민 갤러리</a></h2>
+        <h2><a href="2.html">성수한 갤러리</font></a></h2>
+        <h2><a href="3.html"><font color="red">엄지환 갤러리</a></h2>
+        <h2><a href="6.html">Uganda's Defense Minister</a></h2>
 
+      <br><h2><a><strong>엄지환 갤러리</strong></a><h2>
+      <br>
 
     </body>
   </html>
