--- a/1_index.html
+++ b/1_index.html
@@ -32,7 +32,7 @@
             "YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
              encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
           <img src="20 (6).jpg" width="20%">
-          <img src="20 (9).JPG" width="20%">
+          <img src="20 (9).jpg" width="20%">
 
       <h2><a>시봉텐덴노의 신하 여러분 환영합니다. 이 곳은 <strong>탈중앙화</strong>
         된 시봉텐덴노 갤러리입니다.<br>고우민 사진을 제보하실 분들은 홈페이지 개발자 우간다 국방부 장관의 인스타로 연락 바랍니다 </a><h2>
