--- a/1_index.html
+++ b/1_index.html
@@ -24,8 +24,8 @@
     <body>
       <h1><a href="1_index.html"><font color="red">始封撐天皇 鈴木開世施僌</font></a></h1>
       <h2><a href="1.html">고우민 갤러리</a></h2>
-      <h2><a href="2.html">기괴한 고우민</a></h2>
-      <h2><a href="3.html">잘생긴 고우민</a></h2>
+      <h2><a href="2.html">성수한 갤러리</a></h2>
+      <h2><a href="3.html">엄지환 갤러리</a></h2>
       <h2><a href="6.html">Uganda's Defense Minister</a></h2>
 
       <p><iframe width="560" height="315" src="https://www.youtube.com/embed/fE_xynh1stY" title=
