--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
   <html>
     <head>
-        <title>GGCG Warning</title>
+        <title>고우민 갤러리</title>
         <meta charset="utf8">
         <style>
           a {
