--- a/1_index.html
+++ b/1_index.html
@@ -1,7 +1,7 @@
 <!doctype html>
   <html>
     <head>
-        <title>Welcome GGCG</title>
+        <title>시봉텐덴노</title>
         <meta charset="utf8">
         <style>
           a {
