--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!doctype html>
   <html>
     <head>
-        <title>GGCG Strangeumin</title>
+        <title>성수한 갤러리</title>
         <meta charset="utf8">
         <style>
           a {
