--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
   <html>
     <head>
-        <title>GGCG Strangeumin</title>
+        <title>엄지환 갤러리</title>
         <meta charset="utf8">
         <style>
           a {
