--- a/6.html
+++ b/6.html
@@ -1,7 +1,7 @@
 <!doctype html>
   <html>
     <head>
-        <title>GGCG Strangeumin</title>
+        <title>개발자</title>
         <meta charset="utf8">
         <style>
           a {
